[tool.poetry]
name = "congenial-umbrella"
version = "1.0.3"
description = ""
authors = ["Урош Миливојевић <uros@revealbio.com>"]
readme = "README.md"
packages = [{include = "congenial_umbrella"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
